    longer supported.  The bindings are only tested with Python 2.7.
    Update the documentation to use proper Python types and to document
    how str and bytes values are handled.

    Building the Python bindings now requires the setuptools, pytest,
    pytest-runner, and typing Python modules.

    Add -t flag to the remctl client to specify the network timeout.
    Thanks, Remi Ferrand.

    Check for minimum versions of Perl or Python during configure if
    building the Perl or Python bindings is requested.

    More correctly handle user-supplied CFLAGS in combination with make
    warnings when building the PHP bindings.  Add the warning flags to
    AM_CFLAGS instead of CFLAGS and pass user-supplied CFLAGS through to
    configure (but not the warning flags).  Thanks, Ken Dreyer.

    Fix Kerberos library probing with --enable-reduced-depends and
    correctly suppress probing for Kerberos library features when no
    Kerberos library is present.

    Update to rra-c-util 8.0:

    * Skip more Automake files in tests.
    * Fix warnings with current versions of GCC and cppcheck.

    Update to C TAP Harness 4.5:

    * Fix error checking for malloc failure in bstrndup.

remctl 3.15 (2018-05-05)

    Fix a bug where output could have been truncated for a command run by
    the server that was accepting an argument on standard input, if it
    exited before reading all of the input data.  Incorrect server logic
    disabled reads from the child process on write failure, so could have
    missed the last buffer of output from the child.  This was only seen
    under valgrind testing, not reported as a bug, so it's not clear how
    widespread of a problem this was.

    Validate command argument count, the length of command arguments, and
    the length of blocks of output from the server fit into the data type
    used in the wire protocol.

    Check the port argument to remctl and remctld to ensure that it is a
    valid port number.
